--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -29,8 +29,8 @@ jobs:
         with:
           aws_access_key: ${{ secrets.AWS_ACCESS_KEY }}
           aws_secret_key: ${{ secrets.AWS_SECRET_KEY }}
-          application_name: docker-github-action
-          environment_name: Docker-github-action-env
+          application_name: docker-fullstack-app
+          environment_name: Docker-fullstack-app-env
           existing_bucket_name: elasticbeanstalk-ap-southeast-2-590183869725
           region: ap-southeast-2
           version_label: ${{ github.sha }}
