--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -10,12 +10,12 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
-      - run: docker build -t damlee/react-test -f Dockerfile.dev ./frontend
-      - run: docker run -e CI=true damlee/react-test npm test
+      - run: docker build -t damlee/react-test-app -f ./frontend/Dockerfile.dev ./frontend
+      - run: docker run -e CI=true damlee/react-test-app npm test
 
+      - run: docker build -t damlee/docker-frontend ./frontend
       - run: docker build -t damlee/docker-nginx ./nginx
       - run: docker build -t damlee/docker-backend ./backend
-      - run: docker build -t damlee/docker-frontend ./frontend
 
       - run: docker push damlee/docker-frontend
       - run: docker push damlee/docker-nginx
